Fix #153 Update build to work on JDK11 (#155)
* Update -release target to 11, to match JDK 11 source files
* Update some plugins that need to be newer to run on JDK 11
* Fix modernizer warnings by using Java builtins instead of Guava
  classes
* Fix incorrect param name in javadoc